# Roboter

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
Roboter/: roboter.py
Roboter/models/: Restaurant.py  RestaurantModel.py  Robot.py
