[metadata]
name = roboter
version = 0.1.0
url = https://github.com/tanaka0325/Roboter
author = Hiroyuki Tanaka
author_email = h.tanaka.0325@gmail.com
description = sample application
long_description = file:README.md
license = MIT

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    examples

